Fixed layout issues for mobile

--- a/startpage.css
+++ b/startpage.css
@@ -6,10 +6,12 @@
 }
 
 * {
+    /*CSS reset*/
     margin: 0;
     padding: 0;
     font-size: 1rem;
     border-style: none;
+    border-radius: 0px;
 }
 
 #container {
@@ -62,7 +64,6 @@
 input {
     width: 100%;
     height: 5vh;
-    box-shadow: #333 2px 2px;
     margin-bottom: 5px;
 }
 #options {
@@ -205,13 +206,22 @@ img {
 }
 
 @media (max-width: 760px) {
+
+    #clock {
+        transform: translateX(-33vw);
+    }
+
     #clock > #time {
-        font-size: 2rem;
+        font-size: 1.4rem;
         margin-top: 6vh;
     }
 
     #clock > #date {
         font-size: 1rem;
         margin-top: 3vh;
+    }
+
+    #search-button {
+        font-size: 0.6rem;
     }
 }
